# sot-gepetto-viewer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  command_execution.py  graph.py  plot.py  ros_init_node.py  sot_local_plugin.py  sot_plugin.py
src/sot_gepetto_viewer/: callback_after_robot_increment.py  command_execution.py  graph.py  plot.py  sot_local_plugin.py  sot_plugin.py
